reverted (fixed) configuration for main branch + readme update